caddy 0.10.10.  added tests!  improved overrides
* I LOVE the --resolve flag for curl & having tests
* hope this version serves my production needs as is

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,9 +1,9 @@
-import *-Caddyfile
+import /etc/proxy.d/*.caddyfile
 
 :443,
 :80
 gzip
-tls self_signed
+tls {$TLS}
 proxy / {$ORIGIN} {
   transparent
 }
