--- a/t/docker-compose.yml
+++ b/t/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.2'
 
 services:
   proxy:
-    image: dobbs/proxy:0.10.10
+    image: dobbs/proxy:0.10.10-certs
     build: ..
     ports:
       - 8000:443
