--- a/t/docker-compose.yml
+++ b/t/docker-compose.yml
@@ -2,17 +2,17 @@ version: '2.2'
 
 services:
   proxy:
-    image: dobbs/proxy:0.10.10-certs
+    image: dobbs/proxy:0.10.11
     build: ..
     ports:
       - 8000:443
     volumes:
       - 'proxy.d:/etc/proxy.d'
   web:
-    image: abiosoft/caddy:0.10.10
+    image: abiosoft/caddy:0.10.11
     command: -port 3000
   subdomain:
-    image: abiosoft/caddy:0.10.10
+    image: abiosoft/caddy:0.10.11
     volumes:
       - './subdomain.html:/srv/index.html'
     command: -port 3000
